--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ span {
     background: var(--second-bg-color);
 }
 
-.education {
+.games {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -357,34 +357,34 @@ span {
     padding-bottom: 5rem;
 }
 
-.education .education-row {
+.games .games-row {
     display: flex;
     flex-wrap: wrap;
     gap: 5rem;
 }
 
-.education-row .education-column {
+.games-row .games-column {
     flex: 1 1 40rem;
 }
 
-.education-column .title {
+.games-column .title {
     position: relative;
     display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem 2rem;
 }
 
-.education-column .education-box {
+.games-column .games-box {
     position: relative;
     border-left: .2rem solid var(--main-color);
 }
 
-.education-box .education-content {
+.games-box .games-content {
     position: relative;
     padding-left: 2rem;
 }
 
-.education-box .education-content::before {
+.games-box .games-content::before {
     content: '';
     position: absolute;
     top: 0;
@@ -395,7 +395,7 @@ span {
     border-radius: 50%;
 }
 
-.education-content .content {
+.games-content .content {
     position: relative;
     padding: 1.5rem;
     border: .2rem solid var(--main-color);
@@ -404,7 +404,7 @@ span {
     overflow: hidden;
 }
 
-.education-content .content::before {
+.games-content .content::before {
     content: '';
     position: absolute;
     top: 0;
@@ -416,25 +416,25 @@ span {
     transition: .5s;
 }
 
-.education-content .content:hover::before {
+.games-content .content:hover::before {
     width: 100%;
 }
 
-.education-content .content .year {
+.games-content .content .year {
     font-size: 1.5rem;
     color: var(--main-color);
     padding-bottom: .5rem;
 }
 
-.education-content .content .year i {
+.games-content .content .year i {
     padding-right: .5rem;
 }
 
-.education-content .content h3 {
+.games-content .content h3 {
     font-size: 2rem;
 }
 
-.education-content .content p {
+.games-content .content p {
     font-size: 1.6rem;
     padding-top: .5rem;
 }
@@ -535,7 +535,7 @@ span {
 }
 
 .skills-columm:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
-    width: 60%;
+    width: 95%;
 }
 
 .skills-columm:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
@@ -547,11 +547,11 @@ span {
 }
 
 .skills-columm:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
-    width: 67%;
+    width: 80%;
 }
 
 .skills-columm:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
-    width: 85%;
+    width: 90%;
 }
 
 .skills-columm:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
@@ -730,12 +730,12 @@ span {
  }
 
 
- .education .education-box .animate.scroll {
+ .games .games-box .animate.scroll {
     width: 105%;
  }
 
  .about.show-animate .animate.scroll,
- .education.show-animate .animate.scroll,
+ .games.show-animate .animate.scroll,
  .skills.show-animate .animate.scroll,
  .contact.show-animate .animate.scroll,
  .footer.show-animate .animate.scroll  {
@@ -866,7 +866,7 @@ span {
         font-size: 5.2rem;
     }
 
-    .education {
+    .games {
         padding: 10rem 4% 5rem 5%;
     }
 
